fix: more contrast in scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #1b1b30;
+  background-color: #ed9ed6;
   border-radius: 5px;
 }
 
